@@ -1,3 +1,3 @@
 # Snake
 Gra typu Snake, stworzona w 2 semestrze studiów.
-Należy podać w konfiguracji ścieżkę do Java FX
+Należy poprawić w atrybutach ścieżkę do Java FX (Prrzykładowo: --module-path "D:\Program Files (x86)\javafx-sdk-16\lib" --add-modules javafx.controls,javafx.fxml,javafx.web ), a także dodać ścieżkę do bibliotek Java FX w strukturze projektu.
